[package]
name = "lineartree"
description = "A simple tree data structure for rust"
homepage = "https://github.com/frapa/lineartree"
repository = "https://github.com/frapa/lineartree"
documentation = "https://docs.rs/lineartree"
readme = "README.md"
license = "MIT"
version = "0.1.1"
authors = ["Francesco Pasa <francescopasa@gmail.com>"]
edition = "2018"
exclude = [
    ".travis.yml",
]
